--- a/locales/uk.json
+++ b/locales/uk.json
@@ -1,1 +1,40 @@
+{
+  "welcome": "👋 <b>Вітаємо в Currency Дарницький 2.0!</b>\n\n💰 Бот для моніторингу курсів валют у режимі реального часу\n\n🔹 Офіційні курси НБУ\n🔹 Банківські курси (Monobank, PrivatBank)\n🔹 Карта обмінників Дарницького району\n🔹 Графіки динаміки валют\n🔹 Сповіщення про зміни курсу\n\nОберіть мову / Выберите язык:",
+  "language_selected": "✅ Мову встановлено: Українська",
+  "main_menu": "📊 <b>Головне меню</b>\n\nОберіть дію:",
+  "current_rates": "💰 <b>Актуальні курси валют</b>\n<i>Оновлено: {time}</i>\n\n",
+  "usd": "💵 <b>Долар США (USD)</b>",
+  "eur": "💶 <b>Євро (EUR)</b>",
+  "buy": "Купівля",
+  "sell": "Продаж",
+  "nbu": "НБУ",
+  "cash": "Готівка",
+  "change_2h": "Зміна за 2 год",
+  "btn_rates": "💱 Курси валют",
+  "btn_chart": "📊 Графік динаміки",
+  "btn_map": "🗺 Обмінники поруч",
+  "btn_alerts": "🔔 Налаштувати сповіщення",
+  "btn_settings": "⚙️ Налаштування",
+  "btn_back": "◀️ Назад",
+  "select_currency_chart": "📊 <b>Графік динаміки</b>\n\nОберіть валюту:",
+  "select_period": "Оберіть período:",
+  "period_day": "📅 День",
+  "period_week": "📅 Тиждень",
+  "period_month": "📅 Місяць",
+  "generating_chart": "⏳ Генерую графік...",
+  "chart_caption": "📊 Графік курсу {currency} за {period}",
+  "map_description": "🗺 <b>Обмінники Дарницького району</b>\n\n📍 На карті показано {count} обмінників\n💡 Натисніть на точку для деталей\n\nНатисніть кнопку нижче для відкриття карти:",
+  "btn_open_map": "🗺 Відкрити карту",
+  "alerts_menu": "🔔 <b>Налаштування сповіщень</b>\n\nВи можете отримувати сповіщення, коли:\n• Курс зміниться більше ніж на 1%\n• Курс досягне встановленого значення\n\nОберіть дію:",
+  "btn_add_alert": "➕ Додати сповіщення",
+  "btn_my_alerts": "📋 Мої сповіщення",
+  "no_alerts": "У вас поки немає активних сповіщень",
+  "admin_panel": "🔧 <b>Адмін-панель</b>\n\n👤 Користувачів: {users}\n📊 Активних сповіщень: {alerts}\n💱 Обмінників: {exchangers}\n\nОберіть дію:",
+  "btn_add_exchanger": "➕ Додати обмінник",
+  "btn_update_rate": "✏️ Оновити курс",
+  "btn_list_exchangers": "📋 Список обмінників",
+  "btn_stats": "📊 Статистика",
+  "error": "❌ <b>Помилка</b>\n\n{error}",
+  "try_again": "Спробуйте пізніше"
+}
 
