--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1,1 +1,40 @@
+{
+  "welcome": "👋 <b>Добро пожаловать в Currency Дарницкий 2.0!</b>\n\n💰 Бот для мониторинга курсов валют в режиме реального времени\n\n🔹 Официальные курсы НБУ\n🔹 Банковские курсы (Monobank, PrivatBank)\n🔹 Карта обменников Дарницкого района\n🔹 Графики динамики валют\n🔹 Уведомления об изменениях курса\n\nОберіть мову / Выберите язык:",
+  "language_selected": "✅ Язык установлен: Русский",
+  "main_menu": "📊 <b>Главное меню</b>\n\nВыберите действие:",
+  "current_rates": "💰 <b>Актуальные курсы валют</b>\n<i>Обновлено: {time}</i>\n\n",
+  "usd": "💵 <b>Доллар США (USD)</b>",
+  "eur": "💶 <b>Евро (EUR)</b>",
+  "buy": "Покупка",
+  "sell": "Продажа",
+  "nbu": "НБУ",
+  "cash": "Наличные",
+  "change_2h": "Изменение за 2 ч",
+  "btn_rates": "💱 Курсы валют",
+  "btn_chart": "📊 График динамики",
+  "btn_map": "🗺 Обменники рядом",
+  "btn_alerts": "🔔 Настроить уведомления",
+  "btn_settings": "⚙️ Настройки",
+  "btn_back": "◀️ Назад",
+  "select_currency_chart": "📊 <b>График динамики</b>\n\nВыберите валюту:",
+  "select_period": "Выберите период:",
+  "period_day": "📅 День",
+  "period_week": "📅 Неделя",
+  "period_month": "📅 Месяц",
+  "generating_chart": "⏳ Генерирую график...",
+  "chart_caption": "📊 График курса {currency} за {period}",
+  "map_description": "🗺 <b>Обменники Дарницкого района</b>\n\n📍 На карте показано {count} обменников\n💡 Нажмите на точку для деталей\n\nНажмите кнопку ниже для открытия карты:",
+  "btn_open_map": "🗺 Открыть карту",
+  "alerts_menu": "🔔 <b>Настройки уведомлений</b>\n\nВы можете получать уведомления, когда:\n• Курс изменится более чем на 1%\n• Курс достигнет установленного значения\n\nВыберите действие:",
+  "btn_add_alert": "➕ Добавить уведомление",
+  "btn_my_alerts": "📋 Мои уведомления",
+  "no_alerts": "У вас пока нет активных уведомлений",
+  "admin_panel": "🔧 <b>Админ-панель</b>\n\n👤 Пользователей: {users}\n📊 Активных уведомлений: {alerts}\n💱 Обменников: {exchangers}\n\nВыберите действие:",
+  "btn_add_exchanger": "➕ Добавить обменник",
+  "btn_update_rate": "✏️ Обновить курс",
+  "btn_list_exchangers": "📋 Список обменников",
+  "btn_stats": "📊 Статистика",
+  "error": "❌ <b>Ошибка</b>\n\n{error}",
+  "try_again": "Попробуйте позже"
+}
 
